--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,114 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  :root {
+    --background: 0 0% 100%;
+    --foreground: 222.2 84% 4.9%;
+
+    --card: 0 0% 100%;
+    --card-foreground: 222.2 84% 4.9%;
+
+    --popover: 0 0% 100%;
+    --popover-foreground: 222.2 84% 4.9%;
+
+    --primary: 222.2 47.4% 11.2%;
+    --primary-foreground: 210 40% 98%;
+
+    --secondary: 210 40% 96.1%;
+    --secondary-foreground: 222.2 47.4% 11.2%;
+
+    --muted: 210 40% 96.1%;
+    --muted-foreground: 215.4 16.3% 46.9%;
+
+    --accent: 210 40% 96.1%;
+    --accent-foreground: 222.2 47.4% 11.2%;
+
+    --destructive: 0 84.2% 60.2%;
+    --destructive-foreground: 210 40% 98%;
+
+    --border: 214.3 31.8% 91.4%;
+    --input: 214.3 31.8% 91.4%;
+    --ring: 222.2 84% 4.9%;
+
+    --radius: 0.5rem;
+  }
+
+  .theme-custom {
+    /* Name: custom color palette
+         Author: Ilias Ism
+         URL: https://gradient.page */
+
+    /* CSS: .bg-gradient { background: var(--gradient) } */
+    --gradient: linear-gradient(to top left, #f7971e, #ffd200);
+
+    --background: 36 60.45% 4.4%;
+    --foreground: 36 9.3% 97.75%;
+
+    --muted: 36 46.5% 16.5%;
+    --muted-foreground: 36 9.3% 55.5%;
+
+    --popover: 36 46.4% 7.15%;
+    --popover-foreground: 36 9.3% 97.75%;
+
+    --card: 36 46.4% 7.15%;
+    --card-foreground: 36 9.3% 97.75%;
+
+    --border: 36 46.5% 16.5%;
+    --input: 36 46.5% 16.5%;
+
+    --primary: 36 93% 55%;
+    --primary-foreground: 36 9.3% 5.5%;
+
+    --secondary: 36 46.5% 16.5%;
+    --secondary-foreground: 36 9.3% 97.75%;
+
+    --accent: 36 46.5% 16.5%;
+    --accent-foreground: 36 9.3% 97.75%;
+
+    --destructive: 0 62.8% 30.6%;
+    --destructive-foreground: 36 9.3% 97.75%;
+
+    --ring: 36 93% 55%;
+  }
+
+  .dark {
+    --background: 222.2 84% 4.9%;
+    --foreground: 210 40% 98%;
+
+    --card: 222.2 84% 4.9%;
+    --card-foreground: 210 40% 98%;
+
+    --popover: 222.2 84% 4.9%;
+    --popover-foreground: 210 40% 98%;
+
+    --primary: 210 40% 98%;
+    --primary-foreground: 222.2 47.4% 11.2%;
+
+    --secondary: 217.2 32.6% 17.5%;
+    --secondary-foreground: 210 40% 98%;
+
+    --muted: 217.2 32.6% 17.5%;
+    --muted-foreground: 215 20.2% 65.1%;
+
+    --accent: 217.2 32.6% 17.5%;
+    --accent-foreground: 210 40% 98%;
+
+    --destructive: 0 62.8% 30.6%;
+    --destructive-foreground: 210 40% 98%;
+
+    --border: 217.2 32.6% 17.5%;
+    --input: 217.2 32.6% 17.5%;
+    --ring: 212.7 26.8% 83.9%;
+  }
+}
+
+@layer base {
+  * {
+    @apply border-border;
+  }
+  body {
+    @apply bg-background text-foreground;
+  }
+}
