--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -34,11 +34,10 @@
 
     --radius: 0.5rem;
   }
-
   .theme-custom {
     /* Name: custom color palette
-         Author: Ilias Ism
-         URL: https://gradient.page */
+    Author: Ilias Ism
+    URL: https://gradient.page */
 
     /* CSS: .bg-gradient { background: var(--gradient) } */
     --gradient: linear-gradient(to top left, #f7971e, #ffd200);
@@ -72,35 +71,42 @@
 
     --ring: 36 93% 55%;
   }
-
   .dark {
-    --background: 222.2 84% 4.9%;
-    --foreground: 210 40% 98%;
+    /* Name: custom color palette
+  Author: Ilias Ism
+  URL: https://gradient.page */
 
-    --card: 222.2 84% 4.9%;
-    --card-foreground: 210 40% 98%;
+    /* CSS: .bg-gradient { background: var(--gradient) } */
+    --gradient: #00ff7f;
 
-    --popover: 222.2 84% 4.9%;
-    --popover-foreground: 210 40% 98%;
+    --background: 159 65% 4%;
+    --foreground: 159 10% 97.5%;
 
-    --primary: 210 40% 98%;
-    --primary-foreground: 222.2 47.4% 11.2%;
+    --muted: 159 50% 15%;
+    --muted-foreground: 159 10% 55%;
 
-    --secondary: 217.2 32.6% 17.5%;
-    --secondary-foreground: 210 40% 98%;
+    --popover: 159 45% 6.5%;
+    --popover-foreground: 159 10% 97.5%;
 
-    --muted: 217.2 32.6% 17.5%;
-    --muted-foreground: 215 20.2% 65.1%;
+    --card: 159 45% 6.5%;
+    --card-foreground: 159 10% 97.5%;
 
-    --accent: 217.2 32.6% 17.5%;
-    --accent-foreground: 210 40% 98%;
+    --border: 159 50% 15%;
+    --input: 159 50% 15%;
+
+    --primary: 159 100% 50%;
+    --primary-foreground: 159 10% 5%;
+
+    --secondary: 159 50% 15%;
+    --secondary-foreground: 159 10% 97.5%;
+
+    --accent: 159 50% 15%;
+    --accent-foreground: 159 10% 97.5%;
 
     --destructive: 0 62.8% 30.6%;
-    --destructive-foreground: 210 40% 98%;
+    --destructive-foreground: 159 10% 97.5%;
 
-    --border: 217.2 32.6% 17.5%;
-    --input: 217.2 32.6% 17.5%;
-    --ring: 212.7 26.8% 83.9%;
+    --ring: 159 100% 50%;
   }
 }
 
